fix cursor image on safari

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,10 +20,6 @@
   src: url("assets/AniconsGX.woff2") format("woff2");
 }
 
-@mixin cursor($size: 24) {
-  cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='" + $size + "px' height='" + $size + "px' viewBox='0 0 32 32'%3e%3ccircle cx='16' cy='16' r='16' fill='%23fd0'/%3e%3c/svg%3e") $size / 2 $size / 2, auto;
-}
-
 @mixin hover-img-scale {
   img {
     transition: .4s ease;
@@ -98,8 +94,9 @@ body {
   color: var(--fg-color);
   background-color: var(--bg-color);
   padding: var(--spacing-unit);
+  cursor: url(assets/cursor.png) 12 12, auto;
+  cursor: -webkit-image-set(url(assets/cursor.png) 1x, url(assets/cursor@2x.png) 2x) 12 12, auto;
   @include media-breakpoint-down(sm) { padding-top: 0; }
-  @include cursor();
 
   ::selection {
     color: var(--fg-color);
@@ -134,7 +131,6 @@ a {
     text-decoration-line: line-through;
     text-decoration-color: var(--primary-color);
     text-decoration-thickness: .1em;
-    @include cursor(36);
   }
 }
 
